--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-html, body { height: 100%; background-color: #e6e6e6; overflow: hidden; font-size: 14px; }
+html, body { height: 100%; background-color: #e6e6e6; overflow: hidden; font-size: 13px; cursor: default; font-family: "Helvetica Neue"; }
+input, textarea, select { -webkit-appearance: none; cursor: pointer; }
 .splash-screen {
   position: absolute;
   z-index: 100;
@@ -16,51 +17,66 @@ html, body { height: 100%; background-color: #e6e6e6; overflow: hidden; font-siz
 * Toolbar Styles
 */
 .toolbar {
-  height: 40px;
-  padding: 0 10px;
+  padding: 5px 5px;
+  padding-bottom: 2px;
   background-color: #1fafb3;
-}/*
-.toolbar-btn {
-  margin-top: 6px;
-  margin-right: 10px;
-  padding: 14px 18px;
-  font-size: 14px;
-  line-height: 30px;
-  text-shadow: 0 1px rgba(0, 0, 0, 0.4);
-  color: #fff;
-  display:inline-block;
-  vertical-align: middle;
-  text-align: center;
-  cursor: pointer;
-  font-weight: bold;
-  transition: background 0.1s ease-in-out;
-  -webkit-transition: background 0.1s ease-in-out;
-  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-  color: #fff;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
 }
-.toolbar-btn:active {
-  padding-top: 15px;
-        margin-bottom: -1px;
-}
-.toolbar-btn, .toolbar-btn:hover, .toolbar-btn:active {
-  outline: 0 none;
-  text-decoration: none;
-  color: #fff;
-}
-.btn-default {
-  background-color: #3fb8e8;
-  box-shadow: 0px 3px 0px 0px #3293ba;
-}
-.btn-default:hover {
-  background-color: #1baae3;
-}
-.btn-default:active {
-  box-shadow: 0px 1px 0px 0px #3293ba;
-}*/
 
+.toolbar select {
+  display: inline-block;
+  background: #1fafb3;
+  height: 22px;
+  padding: 0 5px;
+  border-radius: 3px;
+  overflow:hidden;
+  border: solid 1px #fff;
+  position: relative;
+  z-index: 10;
+  margin-right: 2px;
+  text-align: left;
+  color: #fff;
+  font-size: 12px;
+}
+
+.icon {
+  display: inline-block;
+  background: #1fafb3;
+  width: 20px;
+  height: 20px;
+  border-radius: 3px;
+  overflow:hidden;
+  border: solid 1px #fff;
+  position: relative;
+  z-index: 10;
+  margin-right: 2px;
+}
+.icon .text {
+  padding: 4px 0;
+  font-size: 13px;
+  text-align:center;
+  z-index: 200;
+  position: relative;
+  color: white;
+}
+.icon:hover {
+  cursor: pointer;
+  background: #10979d;
+}
+
+.status-bar {
+  position: absolute;
+  bottom: 0;
+  height: 30px;
+  width: 100%;
+  line-height: 30px;
+  background-color: #1fafb3;
+  padding: 0 5px;
+  color: #fff;
+}
+
+.serial {
+  float: right;
+}
 
 
 /************
@@ -68,10 +84,10 @@ html, body { height: 100%; background-color: #e6e6e6; overflow: hidden; font-siz
 */
 .layout {
   position: absolute;
-  top: 40px;
+  top: 32px;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 30px;
   font-size: 12px;
 }
 
@@ -81,6 +97,8 @@ html, body { height: 100%; background-color: #e6e6e6; overflow: hidden; font-siz
   overflow: hidden;
 }
 .layout-panel {
+  position: relative;
+  height: 100%;
   width: 20%;
 }
 .layout-separator {
@@ -107,6 +125,50 @@ html, body { height: 100%; background-color: #e6e6e6; overflow: hidden; font-siz
   color: #fff;
 }
 
+
+/************************************
+* Files Tree Styles
+*/
+.files-tree {
+  padding: 5px;
+  height: calc(100% - 10px);
+  overflow: hidden;
+  -webkit-user-select: none;
+  user-select: none;
+}
+.files-tree .header {
+  font-size: 13px;
+  color: #828282;
+  font-weight: bold;
+  text-shadow: 1px 1px 0 #fff;
+  margin-bottom: 5px;
+}
+.files-tree .node {
+  text-indent: 1em;
+}
+.files-tree .item {
+  line-height: 20px;
+}
+.files-tree .node > .item {
+  margin-left: -21px;
+}
+.files-tree .node > .item i {
+  margin-right: 5px;
+}
+.files-tree .children {
+  margin-left: 1em;
+}
+.files-tree .selected {
+  background-color: #9d9d9d;
+  color: #fff;
+}
+.files-tree .tree-scroll {
+  overflow: scroll;
+}
+
+/***********************************
+* Editors Styles
+*/
 .tabs {
   position: relative;
   height: 35px;
